--- a/css/style.Home.css
+++ b/css/style.Home.css
@@ -1,6 +1,10 @@
 body{
     direction: rtl;
     background: #ffffff;
+    outline: none !important;
+}
+button{
+    outline: none !;
 }
 header.header-1{
     background: #FFFFFF;
@@ -593,4 +597,53 @@ a.p-soft{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.pagination-post-menu{
+    background: #ffff;
+    border: 1px dashed #853167;
+    border-radius: 47px;
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+    margin: auto;
+    margin-top: 10px;
+
+}
+.pagination{
+    background: #853167;
+    border-radius: 52px;
+    min-width: 20px;
+    padding: 5px 8px;
+    margin: 10px 15px;
+}
+.pagination a{
+    text-decoration: none;
+    font-family: Tanha;
+    font-size: 18px;
+    line-height: 26px;
+    text-align: center;
+    color: #FFFFFF;
+    
+}
+.pagination .next{
+    margin-left: 15px;
+}
+.pagination .prev{
+    margin-right: 15px;
+}
+.pagination .number{
+    margin: 0 10px;
+}
+.pagination-post-menu .see-more{
+    text-decoration: none;
+    margin: 10px 0;
+    background: #853167;
+    box-shadow: 0px 0px 7px rgba(133, 49, 103, 0.53);
+    border-radius: 40px;
+    font-family: Tanha;
+    font-size: 18px;
+    text-align: center;
+    color: #FFFFFF;
+    padding: 10px 15px;
+    margin-left: 15px;
 }
