--- a/css/style.Home.css
+++ b/css/style.Home.css
@@ -665,3 +665,14 @@ a.p-soft{
     border-radius: 25px;
     width: 100%;
 }
+.footer-ir{
+    background: url(../image/bg-footer.png) no-repeat bottom;
+    background-size: 100%;
+    height: 330px;
+}
+.quick-ac .quick-title{
+    border: 1px dashed #fff;
+    width: 160px;
+    height: 45px;
+    border-radius: 100%;
+}
